force-app/main/default/objects/WBS__c/WBS__c.object-meta.xml
<CustomObject>
    <label>WBS</label>
    <nameField>
        <label>WBS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>