force-app/main/default/objects/WBS__c/fields/BizAttribCode__c.field-meta.xml
<CustomField>
    <fullName>BizAttribCode__c</fullName>
    <description>ZZORDER_TYPE_S</description>
    <label>Biz. Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>