force-app/main/default/objects/WBS__c/fields/DeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>DeletionFlag__c</fullName>
    <label>Deletion Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>