force-app/main/default/objects/WBS__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <description>솔루션의 Item Number</description>
    <label>Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>