force-app/main/default/objects/WBS__c/fields/ItemNumberInt__c.field-meta.xml
<CustomField>
    <fullName>ItemNumberInt__c</fullName>
    <description>ItemNumber String to Number value</description>
    <formula>VALUE(ItemNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ItemNumberInt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>