force-app/main/default/objects/WBS__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>