force-app/main/default/objects/WBS__c/fields/ProjectCodeOutput__c.field-meta.xml
<CustomField>
    <fullName>ProjectCodeOutput__c</fullName>
    <label>Project Code Output</label>
    <length>24</length>
    <type>Text</type>
</CustomField>