force-app/main/default/objects/WBS__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <label>Service Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>