force-app/main/default/objects/WBS__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution(c)</label>
    <referenceTo>Solution__c</referenceTo>
    <relationshipLabel>Solution(c)</relationshipLabel>
    <relationshipName>Solution</relationshipName>
    <type>Lookup</type>
</CustomField>