force-app/main/default/objects/WBS__c/fields/SolutionOwner__c.field-meta.xml
<CustomField>
    <fullName>SolutionOwner__c</fullName>
    <label>Solution Owner</label>
    <length>10</length>
    <type>Text</type>
</CustomField>