force-app/main/default/objects/WBS__c/fields/WBSClass__c.field-meta.xml
<CustomField>
    <fullName>WBSClass__c</fullName>
    <description>WBSClass</description>
    <formula>LEFT(Name, 2)</formula>
    <label>WBS Class</label>
    <type>Text</type>
</CustomField>