force-app/main/default/objects/WBS__c/fields/WBSLevel__c.field-meta.xml
<CustomField>
    <fullName>WBSLevel__c</fullName>
    <description>WBS Level</description>
    <formula>IF(LEN(SUBSTITUTE(Name,&apos;-&apos;,&apos;&apos;)) == 13
			, &apos;1&apos;
			, IF(LEN(SUBSTITUTE(Name,&apos;-&apos;,&apos;&apos;)) == 15 , &apos;2&apos;, &apos;3&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WBSLevel</label>
    <type>Text</type>
</CustomField>